syntax = "proto3";

option csharp_namespace = "PharmacyAPI.Protos";

message MedicineOrderRequest{
	string medicineName = 1;
	int64 medicineAmount = 2;
	string apiKey = 3;
}

message MedicineOrderResponse{
	bool response = 1;
}

